--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -87,6 +87,10 @@ a {
   font-weight: 600;
 }
 
+.text-secondary {
+  color: $text-secondary;
+}
+
 .font-small {
   font-size: $font-size-small;
 }
